Bz/portableCfg.cpp
/* Generated by re2c 0.13.7.5 on Tue Oct 28 18:51:30 2014 */

#include "stdafx.h"

typedef unsigned char uchar;
typedef unsigned int uint;

#define	YYCTYPE		uchar
#define	YYCURSOR	cursor
#define	YYLIMIT		s->lim
#define	YYMARKER	s->ptr

#define	RET(i)	{s->cur = cursor; return i;}
#define	RETT(i, typeid)	{s->cur = cursor; s->type = typeid; return i;}

typedef struct Scanner
{
    int			fd;
    uchar		*bot, *tok, *ptr, *cur, *pos, *lim, *top, *eof;
    uint		line;
    union {
      int i;
      CString *str;
      COLORREF col;
    } val;
    uint		type;
} Scanner;

enum {TYPE_CharSet=0, TYPE_AutoDetect, TYPE_ByteOrder, TYPE_FontName, TYPE_FontStyle, TYPE_FontSize, TYPE_FrameLeft, TYPE_FrameTop, TYPE_CmdShow, TYPE_FrameHeight, TYPE_FrameHeight2, TYPE_FrameWidth2, TYPE_SplitHPos, TYPE_SplitVPos, TYPE_SplitStruct, TYPE_StructView, TYPE_ComboHeight, TYPE_Language, TYPE_DetectMax, TYPE_BarState, TYPE_ReadOnly, TYPE_BmpWidth, TYPE_BmpZoom, TYPE_BmpPallet, TYPE_MaxOnMemory, TYPE_MaxMapSize, TYPE_TagAll, TYPE_SubCursor, TYPE_Colors, TYPE_MemberColumns2, TYPE_PageMargin, TYPE_DumpHeader, TYPE_DumpPage, TYPE_QWordAddr, TYPE_ClearUndoRedoWhenSave, TYPE_SyncScroll, TYPE_Grid, TYPE_BmpColorWidth, TYPE_InspectView, TYPE_AnalyzerView, TYPE_BmpAddressTooltip};

void SetIntOption(uint type, int val)
{
  switch(type)
  {
case TYPE_CharSet: options.charset = (CharSet)val; break;
case TYPE_AutoDetect: options.bAutoDetect = val; break;
case TYPE_ByteOrder: options.bByteOrder = val; break;
case TYPE_FontStyle: options.fFontStyle = val; break;
case TYPE_FontSize: options.nFontSize = val; break;
case TYPE_FrameLeft: options.ptFrame.x = val; break;
case TYPE_FrameTop: options.ptFrame.y = val; break;
case TYPE_CmdShow: options.nCmdShow = val; break;
case TYPE_FrameHeight: options.cyFrame = val; break;
case TYPE_FrameHeight2: options.cyFrame2 = val; break;
case TYPE_FrameWidth2: options.cxFrame2 = val; break;
case TYPE_SplitHPos: options.xSplit = val; break;
case TYPE_SplitVPos: options.ySplit = val; break;
case TYPE_SplitStruct: options.xSplitStruct = val; break;
case TYPE_StructView: options.bStructView = val; break;
case TYPE_ComboHeight: options.nComboHeight = val; break;
case TYPE_Language: options.bLanguage = val; break;
case TYPE_DetectMax: options.dwDetectMax = val; break;
case TYPE_BarState: options.barState = val; break;
case TYPE_ReadOnly: options.bReadOnlyOpen = val; break;
case TYPE_BmpWidth: options.nBmpWidth = val; break;
case TYPE_BmpZoom: options.nBmpZoom = val; break;
case TYPE_BmpPallet: options.nBmpPallet = val; break;
case TYPE_MaxOnMemory: options.dwMaxOnMemory = val; break;
case TYPE_MaxMapSize: options.dwMaxMapSize = val; break;
case TYPE_TagAll: options.bTagAll = val; break;
case TYPE_SubCursor: options.bSubCursor = val; break;
case TYPE_DumpPage: options.nDumpPage = val; break;
case TYPE_QWordAddr: options.bQWordAddr = val; break;
case TYPE_ClearUndoRedoWhenSave: options.bClearUndoRedoWhenSave = val; break;
case TYPE_SyncScroll: options.bSyncScroll = val; break;
case TYPE_Grid: options.iGrid = val; break;
case TYPE_BmpColorWidth: options.nBmpColorWidth = val; break;
case TYPE_InspectView: options.bInspectView = val; break;
case TYPE_AnalyzerView: options.bAnalyzerView = val; break;
case TYPE_BmpAddressTooltip: options.bAddressTooltip = val; break;
	}
}

void SetStrOption(uint type, CString *pVal)
{
  switch(type)
  {
case TYPE_FontName: options.sFontName = *pVal; break;
case TYPE_DumpHeader: options.sDumpHeader = *pVal; break;
	}
}

void SetColorArrOption(uint type, CAtlArray<COLORREF> *pVal)
{
  switch(type)
  {
		case TYPE_Colors:
		{
			COLORREF *col = &(options.colors[0][0]);
			for(int i=0;i < TCOLOR_COUNT*2 && i < pVal->GetCount();i++)
			{
			  col[i] = (*pVal)[i];
			}
			break;
		}
	}
}

void SetIntArrOption(uint type, CAtlArray<int> *pVal)
{
  switch(type)
  {
		case TYPE_MemberColumns2:
		{
			for(int i=0;i < MBRCOL2_MAX && i < pVal->GetCount();i++)
			{
			  options.colWidth2[i] = (*pVal)[i];
			}
			break;
		}
	}
}

void SetRectOption(uint type, int *pVal)
{
  switch(type)
  {
case TYPE_PageMargin: options.rMargin.left = pVal[0]; options.rMargin.top = pVal[1]; options.rMargin.right = pVal[2]; options.rMargin.bottom = pVal[3]; break;
	}
}

#include "PortableCfgParser.h"
#include "PortableCfgParser.c"


COLORREF ReadRGB(uchar *token)
{
  COLORREF c=0xFF000000;
  _snscanf((const char *)token, 6, "%06x", &c);
  return c;
}

COLORREF ReadRGBA(uchar *token)
{
  COLORREF c=0;
  _snscanf((const char *)token, 8, "%08x", &c);
  return c;
}

CString ReadStr(uchar *token, uint len)
{
  CStringA tmpA;
  tmpA.SetString((const char *)token, len);
  CStringW tmpB = CA2W(tmpA, CP_UTF8);
  tmpB.Replace(L"%", L"%%");
  CString retStr;
  retStr.Format(tmpB);
  return retStr;
}

BOOL fill(int n) { return FALSE; }

int scan(Scanner *s){
	uchar *cursor = s->cur;
std:
	s->tok = cursor;



{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 21) if(!fill(21)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy19;
	case '\n':	goto yy36;
	case '\v':
	case '\f':	goto yy35;
	case 0x1A:	goto yy33;
	case '"':	goto yy24;
	case '#':	goto yy23;
	case '+':
	case '-':	goto yy18;
	case ',':	goto yy31;
	case '/':	goto yy2;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy21;
	case '=':	goto yy25;
	case 'A':	goto yy5;
	case 'B':	goto yy6;
	case 'C':	goto yy4;
	case 'D':	goto yy10;
	case 'F':	goto yy7;
	case 'G':	goto yy16;
	case 'I':	goto yy17;
	case 'L':	goto yy9;
	case 'M':	goto yy12;
	case 'P':	goto yy14;
	case 'Q':	goto yy15;
	case 'R':	goto yy11;
	case 'S':	goto yy8;
	case 'T':	goto yy13;
	case '{':	goto yy27;
	case '}':	goto yy29;
	default:	goto yy38;
	}
yy2:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '*':	goto yy416;
	case '/':	goto yy414;
	default:	goto yy3;
	}
yy3:
	{
    ATLTRACE("unexpected character: %c\n", *s->tok);
    goto std;
  }
yy4:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'h':	goto yy366;
	case 'l':	goto yy363;
	case 'm':	goto yy365;
	case 'o':	goto yy364;
	default:	goto yy3;
	}
yy5:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'n':	goto yy341;
	case 'u':	goto yy342;
	default:	goto yy3;
	}
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy279;
	case 'm':	goto yy278;
	case 'y':	goto yy280;
	default:	goto yy3;
	}
yy7:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'o':	goto yy232;
	case 'r':	goto yy231;
	default:	goto yy3;
	}
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'p':	goto yy184;
	case 't':	goto yy183;
	case 'u':	goto yy182;
	case 'y':	goto yy181;
	default:	goto yy3;
	}
yy9:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy173;
	default:	goto yy3;
	}
yy10:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy150;
	case 'u':	goto yy149;
	default:	goto yy3;
	}
yy11:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy141;
	default:	goto yy3;
	}
yy12:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy109;
	case 'e':	goto yy108;
	default:	goto yy3;
	}
yy13:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy102;
	default:	goto yy3;
	}
yy14:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy92;
	default:	goto yy3;
	}
yy15:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'W':	goto yy83;
	default:	goto yy3;
	}
yy16:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'r':	goto yy79;
	default:	goto yy3;
	}
yy17:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'n':	goto yy68;
	default:	goto yy3;
	}
yy18:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case ' ':	goto yy66;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy62;
	default:	goto yy3;
	}
yy19:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy65;
yy20:
	{ if(cursor == s->eof)RET(0); goto std; }
yy21:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy63;
yy22:
	{ uchar *start = s->tok;
				bool bMinus = false;
				if(*start == '-')bMinus = true;
				while(*start<'0' || *start>'9')start++;
				CStringA tmp;
				tmp.SetString((const char *)(start), cursor - start);
				s->val.i = bMinus ? -atoi(tmp) : atoi(tmp);
				RET(INTVAL); }
yy23:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy52;
	default:	goto yy3;
	}
yy24:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy3;
	default:	goto yy42;
	}
yy25:
	++YYCURSOR;
	{ RET(EQ); }
yy27:
	++YYCURSOR;
	{ RET(BR1); }
yy29:
	++YYCURSOR;
	{ RET(BR2); }
yy31:
	++YYCURSOR;
	{ RET(COMMA); }
yy33:
	++YYCURSOR;
	{ RET(0);/*EOF*/ }
yy35:
	yych = *++YYCURSOR;
	goto yy40;
yy36:
	++YYCURSOR;
	{
    if(cursor == s->eof)RET(0);
    s->pos = cursor; s->line++;
    goto std;
  }
yy38:
	yych = *++YYCURSOR;
	goto yy3;
yy39:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy40:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy39;
	default:	goto yy20;
	}
yy41:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy42:
	switch (yych) {
	case '\n':	goto yy43;
	case '"':	goto yy45;
	case '\\':	goto yy44;
	default:	goto yy41;
	}
yy43:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy3;
	} else {
		goto yy58;
	}
yy44:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '"':
	case '\'':
	case '?':
	case '\\':
	case 'a':
	case 'b':
	case 'f':
	case 'n':
	case 'r':
	case 't':
	case 'v':	goto yy41;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy48;
	case 'x':	goto yy47;
	default:	goto yy43;
	}
yy45:
	++YYCURSOR;
	{ s->val.str = new CString(); *(s->val.str) = ReadStr(s->tok + 1, cursor - s->tok -2); RET(STRVAL); }
yy47:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy50;
	default:	goto yy43;
	}
yy48:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy43;
	case '"':	goto yy45;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy48;
	case '\\':	goto yy44;
	default:	goto yy41;
	}
yy50:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy43;
	case '"':	goto yy45;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy50;
	case '\\':	goto yy44;
	default:	goto yy41;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy53;
	default:	goto yy43;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy54;
	default:	goto yy43;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy55;
	default:	goto yy43;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy56;
	default:	goto yy43;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy57;
	default:	goto yy43;
	}
yy57:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy59;
	default:	goto yy58;
	}
yy58:
	{ s->val.col = ReadRGB(s->tok + 1); RET(COLVAL); }
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy60;
	default:	goto yy43;
	}
yy60:
	++YYCURSOR;
	{ s->val.col = ReadRGBA(s->tok + 1); RET(COLVAL); }
yy62:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy63:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy62;
	default:	goto yy22;
	}
yy64:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy65:
	switch (yych) {
	case '\t':
	case ' ':	goto yy64;
	case '\v':
	case '\f':	goto yy39;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy62;
	default:	goto yy20;
	}
yy66:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy66;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy62;
	default:	goto yy43;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy69;
	default:	goto yy43;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy70;
	default:	goto yy43;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy71;
	default:	goto yy43;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy72;
	default:	goto yy43;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy73;
	default:	goto yy43;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'V':	goto yy74;
	default:	goto yy43;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy75;
	default:	goto yy43;
	}
yy75:
	yych = *++YYCURSOR;
